Fixed bug #30820 (static member conflict with $this->member silently ignored)